--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="https://dq77.github.io/blog">博客地址<div class='arrow'></div></a></li>
     <li><a href="https://dq77.github.io/kebiao">课表<div class='arrow'></div></a></li>
     <li><a href="https://dq77.github.io/radar">雷达图<div class='arrow'></div></a></li>
+    <li><a href="https://dq77.github.io/gomoku">AI五子棋<div class='arrow'></div></a></li>
     <li><a href="https://github.com/dq77?tab=repositories">仓库地址<div class='arrow'></div></a></li>
   </ul>
 </body>
