--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
   <div class='title'>页面列表</div>
   <ul>
-    <li><a href="https://dq77.github.io/blog">博客地址<div class='arrow'></div></a></li>
-    <li><a href="https://dq77.github.io/kebiao">课表<div class='arrow'></div></a></li>
-    <li><a href="https://dq77.github.io/radar">雷达图<div class='arrow'></div></a></li>
-    <li><a href="https://dq77.github.io/gomoku">AI五子棋<div class='arrow'></div></a></li>
+    <li><a href="https://www.767766.xyz/blog">博客地址<div class='arrow'></div></a></li>
+    <li><a href="https://www.767766.xyz/kebiao">课表<div class='arrow'></div></a></li>
+    <li><a href="https://www.767766.xyz/radar">雷达图<div class='arrow'></div></a></li>
+    <li><a href="https://www.767766.xyz/gomoku">AI五子棋<div class='arrow'></div></a></li>
     <li><a href="https://github.com/dq77?tab=repositories">仓库地址<div class='arrow'></div></a></li>
   </ul>
 </body>
