--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/svg+xml" href="vite.svg">
   <title>导航列表</title>
   <meta name="description" content="掉漆的标题导航页" data-rh="true">
   <link rel="stylesheet" href="./index.css">
