--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <li><a href="https://www.767766.xyz/kebiao">课表<div class='arrow'></div></a></li>
     <li><a href="https://www.767766.xyz/radar">雷达图<div class='arrow'></div></a></li>
     <li><a href="https://www.767766.xyz/gomoku">AI五子棋<div class='arrow'></div></a></li>
+    <li><a href="https://www.767766.xyz/reach">睿驰搜<div class='arrow'></div></a></li>
     <li><a href="https://github.com/dq77?tab=repositories">仓库地址<div class='arrow'></div></a></li>
   </ul>
 </body>
